--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Static Web Page</title>
     <link href="index.css" rel="stylesheet">
+    <script src="script.js"></script>
 </head>
 <body>
 
@@ -14,13 +15,18 @@
         <a href="#">Online Voting</a>
         <div class="nav-link">
             <a href="#">Home</a>
-            <a href="#">Register</a>
+            <a class="nopad" href="#"><div class="openBtn">
+                <button class="openButton" data-modal="modalZero">Register</button>
+              </div></a>
             <a href="#">Voting</a>
             <a href="#">Election Results</a>
-            <a href="#">FAQs</a>
-            <a href="#">About us</a>
+            <a class="nopad" href="#"><div class="openBtn">
+                <button class="openButton" data-modal="modalOne">Contact us</button>
+              </div></a>
+              <a class="nopad" href="#"><div class="openBtn">
+                <button class="openButton" data-modal="modalTwo">Register Complaint</button>
+              </div></a>
         </div>
-
     </div>
 
     <div class="banner dark">
@@ -30,6 +36,104 @@
         <h1>This is the new official Voting system Website</h1>
         <p>The website has been updated to provide voters an even easier way to find important election and voting information</p>
     </div>
+
+    <div class="content">
+        <div class="tiles"><img src="https://image.shutterstock.com/image-vector/registration-icon-on-white-background-260nw-331182206.jpg" alt="registration" usemap="#workmap"></div>
+        <div class="tiles"><img src="https://cdn-icons-png.flaticon.com/512/4812/4812397.png" alt="registration" usemap="#workmap"></div>
+        <div class="tiles"><img src="https://previews.123rf.com/images/trimulyani/trimulyani2003/trimulyani200300137/141296348-speaker-icon-vector-design-symbol.jpg" alt="registration" usemap="#workmap"></div>
+        <div class="tiles"><img src="https://image.shutterstock.com/image-vector/newspaper-icon-thin-line-web-260nw-282635822.jpg" alt="registration" usemap="#workmap"></div>
+        
+    </div>
+
+    <map name="workmap">
+        <area shape="default" alt="default" href="www.google.com">
+    </map>
+
+
+
+
+    <div id="modalZero" class="modal">
+        <div class="modal-content">
+          <div class="contact-form">
+            <a class="close">&times;</a>
+            <form action="/">
+              <h2>Register</h2>
+              <div>
+                <input class="fname" type="text" name="name" placeholder="Full name" />
+                <input type="text" name="name" placeholder="Email" />
+                <input type="text" name="name" placeholder="Phone number" />
+              </div>
+              <button type="submit" href="/">Submit</button>
+            </form>
+          </div>
+        </div>
+      </div>
+
+    <div id="modalOne" class="modal">
+        <div class="modal-content">
+          <div class="contact-form">
+            <a class="close">&times;</a>
+            <form action="/">
+              <h2>Contact Us</h2>
+              <div>
+                <input class="fname" type="text" name="name" placeholder="Full name" />
+                <input type="text" name="name" placeholder="Email" />
+                <input type="text" name="name" placeholder="Phone number" />
+                <input type="text" name="name" placeholder="Website" />
+              </div>
+              <span>Message</span>
+              <div>
+                <textarea rows="4"></textarea>
+              </div>
+              <button type="submit" href="/">Submit</button>
+            </form>
+          </div>
+        </div>
+      </div>
+
+      <div id="modalTwo" class="modal">
+        <div class="modal-content">
+          <div class="contact-form">
+            <span class="close">&times;</span>
+            <form action="/">
+              <h2>Complaint form</h2>
+              <div>
+                <input class="fname" type="text" name="name" placeholder="Full name" />
+                <input type="text" name="name" placeholder="Email" />
+                <input type="text" name="name" placeholder="Phone number" />
+                <input type="text" name="name" placeholder="Website" />
+              </div>
+              <span>Message</span>
+              <div>
+                <textarea rows="4"></textarea>
+              </div>
+              <button type="submit" href="/">Submit</button>
+            </form>
+          </div>
+        </div>
+      </div>
+
+    <script>
+        let modalBtns = [...document.querySelectorAll(".openButton")];
+      modalBtns.forEach(function (btn) {
+        btn.onclick = function () {
+          let modal = btn.getAttribute("data-modal");
+          document.getElementById(modal).style.display = "block";
+        };
+      });
+      let closeBtns = [...document.querySelectorAll(".close")];
+      closeBtns.forEach(function (btn) {
+        btn.onclick = function () {
+          let modal = btn.closest(".modal");
+          modal.style.display = "none";
+        };
+      });
+      window.onclick = function (event) {
+        if (event.target.className === "modal") {
+          event.target.style.display = "none";
+        }
+      };
+    </script>
     
 </body>
 </html>
