--- a/index.html
+++ b/index.html
@@ -49,7 +49,117 @@
         <area shape="default" alt="default" href="www.google.com">
     </map>
 
+    <div class="table"><table>
+        <tr>
+            <th colspan="8">Voting Timings</th>
+        </tr>
+        <tr>
+            <th></th>
+            <th>9:00-10:00</th>
+            <th>10:00-11:00</th>
+            <th>11:00-12:00</th>
+            <th>12:00-1:00</th>
+            <th class="rotate" rowspan="6">Lunch<br> break</th>
+            <th>2:00-3:00</th>
+            <th>3:00-4:00</th>
+        </tr>
+        <tr>
+            <td>Monday</td>
+            <td>SE(VT)</td>
+            <td>MP(RK)</td>
+            <td class="grey" colspan="2">G2:MP LAB(RK,RV) 811<br>G1:WSD LAB(KL,SA)813</td>
+            <td>WSD(KL)</td>
+            <td>RM(SD)</td>
+        </tr>
+        <tr>
+            <td>Tuesday</td>
+            <td class="grey" colspan="3">DBT LAB(RU,JC,SD,FIZAN)MCA LAB</td>
+            <td>DBT(RU)</td>
+            <td>LIBRARY</td>
+            <td>WSD(KL)</td>
+        </tr>
+        <tr>
+            <td>Wednesday</td>
+            <td>MP(RK)</td>
+            <td>RM(SD)</td>
+            <td>WSD(KL)</td>
+            <td>SE(VT)</td>
+            <td>LIBRARY</td>
+            <td>DBT(RU)</td>
+        </tr>
+        <tr>
+            <td>Thursday</td>
+            <td>SE(VT)</td>
+            <td>DBT(RU)</td>
+            <td class="grey" colspan="2">G1:MP LAB(RK,RV) 811<br>G2:WSD LAB(KL,SA)813</td>
+            <td>MP(RK)</td>
+            <td>LIBRARY</td>
+        </tr>
+        <tr>
+            <td>Friday</td>
+            <td>WSD(KL)</td>
+            <td>RM(SD)</td>
+            <td class="grey" colspan="2">G1:MP LAB(RK,RV) 811<br>G2:WSD LAB(KL,SA)813</td>
+            <td>MP(RK)</td>
+            <td>DBT(RU)</td>
+        </tr>
+        <tr>
+            <td>Friday</td>
+            <td class="grey" colspan="2">G1:MP LAB(RK,RV) 811<br>G2:WSD LAB(KL,SA)813</td>
+            <td>SE(VT)</td>
+            <td>MENTORING</td>
+            <td border="0"></td>
+            <td border="0"></td>
+            <td border="0"></td>
+        </tr>
+    </table></div>
 
+    <div class="list"><div><h3>Candidates</h3>
+        <ul>
+            <li>Name</li>
+            <li>Name</li>
+            <li>Name</li>
+            <li>Name</li>
+            <li>Name</li>
+            <li>Name</li>
+            <li>Name</li>
+            <li>Name</li>
+            <li>Name</li>
+        </ul></div>
+        <div>
+        <h3>Candidates</h3>
+        <ol>
+            <li>Name</li>
+            <li>Name</li>
+            <li>Name</li>
+            <li>Name</li>
+            <li>Name</li>
+            <li>Name</li>
+            <li>Name</li>
+            <li>Name</li>
+            <li>Name</li>
+        </ol></div>
+        <div>
+        <h3>Candidates</h3>
+        <dl>
+            <dt>Candidate1</dt>
+            <dr>Name</dr>
+            <dt>Candidate2</dt>
+            <dr>Name</dr>
+            <dt>Candidate3</dt>
+            <dr>Name</dr>
+            <dt>Candidate4</dt>
+            <dr>Name</dr>
+            <dt>Candidate5</dt>
+            <dr>Name</dr>
+            <dt>Candidate6</dt>
+            <dr>Name</dr>
+            <dt>Candidate7</dt>
+            <dr>Name</dr>
+            <dt>Candidate8</dt>
+            <dr>Name</dr>
+        </dl></div>
+    </div>
 
 
     <div id="modalZero" class="modal">
